RESOLVED FIXED170049
[GStreamer] MediaPlayerPrivateGStreamerOwr shouldn't be the default engine
https://bugs.webkit.org/show_bug.cgi?id=170049
Summary [GStreamer] MediaPlayerPrivateGStreamerOwr shouldn't be the default engine
Carlos Garcia Campos
Reported 2017-03-24 04:20:23 PDT
This is causing several media tests to fail after r214338. When trying to load something like this: http://127.0.0.1:8000/media/resources/serve-video.php?name=../../../../media/content/silence.wav&type=audio/wav&content-length=no&icy-data=yes since r214338, the content type is known and inferred from the extension in this case, what ends up calling nextMediaEngine() in MediaPlayer::loadWithNextMediaEngine. That returns the first registered media engine, that is Owr that doesn't know how to load that and fails.
Attachments
Patch (2.47 KB, patch)
2017-03-24 04:26 PDT, Carlos Garcia Campos
no flags
Patch (3.23 KB, patch)
2017-03-24 05:00 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2017-03-24 04:26:31 PDT
Carlos Garcia Campos
Comment 2 2017-03-24 05:00:07 PDT
Created attachment 305276 [details] Patch ChangeLog updated with the tests fixed by this.
Carlos Garcia Campos
Comment 3 2017-03-24 05:51:06 PDT
Note You need to log in before you can comment on or make changes to this bug.